--- a/exercises.html
+++ b/exercises.html
@@ -939,12 +939,11 @@
                         <div class="question">
                             <p>Use CSS to set the background color of the document (body) to yellow.</p>
                             <p>&lt;!DOCTYPE html&gt;</p>
-                            <p>&lt;!DOCTYPE html&gt;</p>
                             <p>&lt;head&gt;</p>
                             <p>&lt;style&gt;</p>
-                            <p><input type="text" id = "css1_2" maxlength="4" class="ansInput" data-element="7" data-answer="body" data-group="30"> <input type="text" id = "css1_2" maxlength="1" class="ansInput" data-element="9" data-answer="&rbrace;" data-group="30"></p>
+                            <p><input type="text" id = "css1_2" maxlength="4" class="ansInput" data-element="7" data-answer="body" data-group="30"> &rbrace;</p>
                             <p><input type="text" id = "css1_3" maxlength="16" class="ansInput" data-element="7" data-answer="background-color" data-group="30">: yellow;</p>
-                            <p><input type="text" id = "css1_4" maxlength="1" class="ansInput" data-element="9" data-answer="&lbrace;" data-group="30"></p>
+                            <p>&lbrace;</p>
                             <p>&lt;/style&gt;</p>
                             <p>&lt;/head&gt;</p>
                             <p>&lt;body&gt;</p>
@@ -959,9 +958,9 @@
                             <p>&lt;!DOCTYPE html&gt;</p>
                             <p>&lt;head&gt;</p>
                             <p>&lt;style&gt;</p>
-                            <p><input type="text" maxlength="4" class="ansInput" data-element="7" value="body" readonly> <input type="text" maxlength="1" class="ansInput" data-element="9" value="{" readonly></p>
+                            <p><input type="text" maxlength="4" class="ansInput" data-element="7" value="body" readonly> &rbrace;</p>
                             <p><input type="text" maxlength="16" class="ansInput" data-element="7" value="background-color" readonly>: yellow;</p>
-                            <p><input type="text" maxlength="1" class="ansInput" data-element="9" value="}" readonly></p>
+                            <p>&lbrace;</p>
                             <p>&lt;/style&gt;</p>
                             <p>&lt;/head&gt;</p>
                             <p>&lt;body&gt;</p>
@@ -993,7 +992,7 @@
                             <p>&lt;html&gt;</p>
                             <p>&lt;head&gt;</p>
                             <p>&lt;style&gt;</p>
-                            <p>body {<input type="text" maxlength="11" class="ansInput" data-element="6" value="font-family" readonly>:courier;}</p>
+                            <p>body {<input type="text" maxlength="11" class="ansInput" data-element="6" value="font-family" readonly>:red;}</p>
                             <p>&lt;style&gt;</p>
                             <p>&lt;/head&gt;</p>
                             <p>&lt;body&gt;</p>
@@ -1047,7 +1046,7 @@
                             <p>&lt;html&gt;</p>
                             <p>&lt;head&gt;</p>
                             <p>&lt;style&gt;</p>
-                            <p><input type="text" id = "css4_1" maxlength="1" class="ansInput" data-element="9" data-answer="p" data-group="33">{<input type="text" id = "css4_2" maxlength="6" class="ansInput" data-element="7">: <input type="text" id = "css4_3" maxlength="3" class="ansInput" data-element="9"> solid <input type="text" id = "css4_4" maxlength="6" class="ansInput" data-element="7">;}</p>
+                            <p><input type="text" id = "css4_1" maxlength="1" class="ansInput" data-element="9" data-answer="p" data-group="33">{<input type="text" id = "css4_2" maxlength="6" class="ansInput" data-element="7" data-group="33">: <input type="text" id = "css4_3" maxlength="3" class="ansInput" data-element="9" data-group="33"> solid <input type="text" id = "css4_4" maxlength="6" class="ansInput" data-element="7" data-group="33">;}</p>
                             <p>&lt;/style&gt;</p>
                             <p>&lt;/head&gt;</p>
                             <p>&lt;body&gt;</p>
@@ -1084,7 +1083,7 @@
                     <div class="mainExer" id="mainExer34">
                         <div class="question">
                             <p>Use the correct HTML to make the text below into a link to "default.html".</p>
-                            <p><input type="text" id = "links1_1" maxlength="2" class="ansInput" data-element="9" data-answer="&lt;a" data-group="34"> <input type="text" id = "links1_2" maxlength="17" class="ansInput" data-element="6">>&gt;Visit our HTML tutorial.<input type="text" id = "links3" maxlength="4" class="ansInput" data-element="8"></p>
+                            <p><input type="text" id = "links1_1" maxlength="2" class="ansInput" data-element="9" data-answer="&lt;a" data-group="34"> <input type="text" id = "links1_2" maxlength="17" class="ansInput" data-element="6" data-group="34">>&gt;Visit our HTML tutorial.<input type="text" id = "links3" maxlength="4" class="ansInput" data-element="8" data-group="34"></p>
                             <button class="verify" onclick="checkAns(this.id)" id="34">Submit Answer</button>
                         </div>
                         <div class="answer" id="answer34">
@@ -1126,9 +1125,9 @@
                     <div class="mainExer" id="mainExer37">
                         <div class="question">
                             <p>Use the correct HTML to make the image become a link to "default.html".</p>
-                            <p><input type="text" id = "links4_1" maxlength="2" class="ansInput" data-element="9"> <input type="text" id = "links4_2" maxlength="20" class="ansInput" data-element="6" data-answer="href=&quot;default.html&quot;&gt;" data-group="37"></p>
+                            <p><input type="text" id = "links4_1" maxlength="2" class="ansInput" data-element="9" data-group="37"> <input type="text" id = "links4_2" maxlength="20" class="ansInput" data-element="6" data-answer="href=&quot;default.html&quot;&gt;" data-group="37"></p>
                             <p>&lt;img src="smiley.gif"&gt;</p>
-                            <p><input type="text" id = "links4_3" maxlength="4" class="ansInput" data-element="7"></p>
+                            <p><input type="text" id = "links4_3" maxlength="4" class="ansInput" data-element="7" data-group="37"></p>
                             <button class="verify" onclick="checkAns(this.id)" id="37">Submit Answer</button>
                         </div>
                         <div class="answer" id="answer37">
@@ -1163,7 +1162,7 @@
                     <div class="mainExer" id="mainExer39">
                         <div class="question">
                             <p>Use the HTML image attributes to set the size of the image to 250 pixels wide and 400 pixels tall.</p>
-                            <p>&lt;img src="scream.png" <input type="text" id = "images1_1" maxlength="5" class="ansInput" data-element="8" data-answer="width" data-group="39">="250" <input type="text" id = "images1_2" maxlength="6" class="ansInput" data-element="8">="400"&gt;</p>
+                            <p>&lt;img src="scream.png" <input type="text" id = "images1_1" maxlength="5" class="ansInput" data-element="8" data-answer="width" data-group="39">="250" <input type="text" id = "images1_2" maxlength="6" class="ansInput" data-element="8" data-answer="height" data-group="39">="400"&gt;</p>
                             <button class="verify" onclick="checkAns(this.id)" id="39">Submit Answer</button>
                         </div>
                         <div class="answer" id="answer39">
@@ -1191,9 +1190,9 @@
                     <div class="mainExer" id="mainExer41">
                         <div class="question">
                             <p>Use the correct HTML to make the image become a link to "default.html".</p>
-                            <p><input type="text" id = "images3_1" maxlength="2" class="ansInput" data-element="8" data-answer="&lt;a" data-group="41"> <input type="text" id = "images3_2" maxlength="19" class="ansInput" data-element="8">&gt;</p>
+                            <p><input type="text" id = "images3_1" maxlength="2" class="ansInput" data-element="8" data-answer="&lt;a" data-group="41"> <input type="text" id = "images3_2" maxlength="19" class="ansInput" data-element="8" data-answer="href=&quot;default.html&quot;" data-group="41">&gt;</p>
                             <p>&lt;img src="smiley.gif"&gt;</p>
-                            <p><input type="text" id = "images3_3" maxlength="4" class="ansInput" data-element="8"></p>
+                            <p><input type="text" id = "images3_3" maxlength="4" class="ansInput" data-element="8" data-answer="&lt;/a&gt;" data-group="41"></p>
                             <button class="verify" onclick="checkAns(this.id)" id="41">Submit Answer</button>
                         </div>
                         <div class="answer" id="answer41">
@@ -1467,7 +1466,7 @@
                             <p>
                                 Add a list item with the text "Coffee" inside the &lt;ul&gt;.<br>
                                 &lt;ul&gt;<br>
-                                <input type="text" id = "lists1_1" maxlength="4" class="ansInput" data-element="8" data-answer="&lt;li&gt;" data-group="51">Coffee<input type="text" id = "lists1_2" maxlength="5" class="ansInput" data-element="8"><br>
+                                <input type="text" id = "lists1_1" maxlength="4" class="ansInput" data-element="8" data-answer="&lt;li&gt;" data-group="51">Coffee<input type="text" id = "lists1_2" maxlength="5" class="ansInput" data-element="8" data-answer="&lt;/a&gt;" data-group="51"><br>
                                 &lt;/ul&gt;<br>
                             </p>
                             <button class="verify" onclick="checkAns(this.id)" id="51">Submit Answer</button>
